# yu-study-buddies

./: .gitignore  README.md
client/: package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.css  App.js  App.test.js  constants.js  index.css
client/src/components/: 404.js  Course.js  Header.js  Hero.js  Home.js  LinkAdd.js  Notifications.js  course-add.js  course.js  courses-list.js  footer.js  header.css  header.js  home.css  home.js  link-add.js  section-add.js
server/: package-lock.json  package.json  server.js
server/db/: data.js  delete-all-and-reconstruct-db.js  import.js  seed.js
server/db/crawler/: courses.json  courses.py  pyproject.toml
server/db/models/: course.js  flag.js  report.js
server/db/parser/: README.md  main.py  parser.py  requirements.txt
server/db/parser/schedules/: COURSES10.html  COURSES2.html  COURSES3.html  COURSES4.html  COURSES5.html  COURSES6.html  COURSES7.html  COURSES8.html  COURSES9.html
server/mod/: email.js  stats.js  template.html  verifier.js
