[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["Jerry Chen <chenhongjin2005@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
requests = "^2.29.0"
html5lib = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
